Enforce private for generators, adding no-complexity option.